--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Miroslav's introduction</title>
 </head>
 
-<body style="font-family: Arial">
+<body style="font-family: Arial; background-color:Lavender">
     <table cellspacing="20">
         <tr>
             <td>
