--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Miroslav's introduction</title>
 </head>
 
-<body style="font-family: Arial; background-color:Lavender">
+<body style="font-family: Verdana; background-color: #d6eaf8; color: #154360">
     <table cellspacing="20">
         <tr>
             <td>
