--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Contact information</title>
 </head>
-<body style="font-family: Arial">
+<body style="font-family: Verdana; background-color: #d6eaf8; color: #154360">
 <h1> Contact information </h1>
     <p> <b>Email:</b> mskota2@gmail.com </p>
 <!--    <p> <b>Phone:</b> +420776540930</p>-->
