New verdana style

--- a/hobbies.html
+++ b/hobbies.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>My Hobbies</title>
 </head>
-<body style="font-family: Arial">
-<h3 style="font-family: Arial">My hobbies</h3>
+<body style="font-family: Verdana; background-color: #d6eaf8; color: #154360">
+<h3>My hobbies</h3>
     <ol>
         <li>Python programming</li>
         <li>Guitar playing</li>
