New index.html file

--- a/index.html
+++ b/index.html
@@ -6,22 +6,95 @@
     <meta name="keywords" content="HTML">
     <meta name="author" content="Miroslav Skota">
     <title>Miroslav's introduction</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
-<body style="font-family: Verdana; background-color: #d6eaf8; color: #154360">
-    <table cellspacing="20">
+<body>
+
+<div class="upper-container">
+    <img class="top-cloud" src="images/cloud.png" alt="mountain-image">
+    <h1>I'm Miroslav</h1>
+    <h2><b>a <u>pro</u>ject manager at <a href="http://www.rppi.cz"> RPPI </a></b></h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="Cloud-image">
+    <img src="images/mountain.png" alt="mountain-image">
+</div>
+
+<div class="middle-container">
+    <div class="profile">
+      <img src="Pasové_foto-modified.png" alt="Profile picture" style="width:150px;height:150px">
+      <h2>Hello</h2>
+      <p class="intro">My name is Miroslav Škota and I welcome you on my personal page. 
+        I am a christian, love good coffee and work as project manager at <a href="http://www.rppi.cz"> RPPI </a>.</p>
+      <br>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills</h2>
+      <div class="skill-row">
+        <img class="project-image" src="images/project-management.webp" alt="Project-picture" width="300px">
+        <h3>Project management</h3>
+        <p class="project-text">I am a certified project manager for PRINCE2 (Projects in controlled enviroment).</p> 
+      </div>
+      
+      <div class="skill-row">
+        <img class="python-image" src="images/python.png" alt="python-code" height="100px">
+        <h3>Python programming</h3>
+        <p class="python-text">I love python programming for fun and I am currently doing 100 days python bootcamp with basics 
+            of web development.</p>
+      </div>
+      <div class="skill-row">
+        <img class="language-image" src="images/languages.png" alt="languages" height="100px">
+        <h3>Languages</h3>
+        <p class="language-text">I am at CA level in English language and manage basics of German and Polish language.</p>
+      </div>
+      <div class="skill-row">
+        <img class="guitar-image" src="images/guitar.png" alt="guitar" height="100px">
+        <h3>Guitar</h3>
+        <p class="guitar-text">One of my other hobbies is playing guitar in our local church band.</p>
+      </div>
+    </div>
+    
+    <div class="contact-me">
+        <br>
+        <h2>Get In Touch</h2>
+        <p>In case you need to contact me, use the links below</p>
+        <br>
+        <a class="btn" href="mailto:mskota2@gmail.com">CONTACT ME</a>
+    </div>
+</div>
+<br>
+<hr>  
+<br>
+<br>
+  
+<div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/miroslav-%C5%A1kota-a1b08057/">LinkedIn</a>
+    <br>
+    <br>
+    <p style="color: #EAF6F6;">© 2022 Miroslav Škota</p>
+
+</div>
+
+
+
+
+    <!-- <table cellspacing="20">
         <tr>
             <td>
                 <img src="Pasové_foto-modified.png" alt="Profile picture" style="width:150px;height:150px">
             </td>
             <td>
                 <h1>Miroslav Škota</h1>
-                <p style="font-family: Arial"><b>Project manager at <a href="http://www.rppi.cz"> RPPI </a></b></p>
-                <p style="font-family: Arial"> I love Jesus and good coffee</p>
+                <p><b>Project manager at <a href="http://www.rppi.cz"> RPPI </a></b></p>
+                <p> I love Jesus and good coffee</p>
             </td>
         </tr>
     </table>
-        <hr size="3" style="font-family: Arial">
+    <hr>
 
     <h3>Education:</h3>
     <h4> Dopravní fakulta jana Pernera, obor technologie a řízení dopravy </h4>
@@ -32,7 +105,7 @@
         <li>ČD Komando mobile application</li>
         <li>Analysis for modernization of railway tracks IS</li>
     </ul>
-    <hr size="3">
+    <hr>
 
     <h3>Work experience</h3>
     <table cellspacing="10">
@@ -54,7 +127,7 @@
         </tbody>
     </table>
 
-    <hr size="3">
+    <hr>
     <h3>Skills</h3>
     <table cellspacing="10">
         <tr>
@@ -76,5 +149,5 @@
     <p><a href="contact.html"> Contact me</a></p>
 
 </body>
-</html>
+</html> -->
 
