Index.html update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="contact-me">
         <br>
         <h2>Get In Touch</h2>
-        <p>In case you need to contact me, use the links below</p>
+        <p class="outro">In case you need to contact me, use the links below</p>
         <br>
         <a class="btn" href="mailto:mskota2@gmail.com">CONTACT ME</a>
     </div>
@@ -72,7 +72,8 @@
 <br>
   
 <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/miroslav-%C5%A1kota-a1b08057/">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/miroslav-%C5%A1kota-a1b08057/" 
+    style="font-size: 20px;">LinkedIn</a>
     <br>
     <br>
     <p style="color: #EAF6F6;">© 2022 Miroslav Škota</p>
