Index.html update

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
 
 <div class="upper-container">
-    <img class="top-cloud" src="images/cloud.png" alt="mountain-image">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
     <h1>I'm Miroslav</h1>
     <h2><b>a <u>pro</u>ject manager at <a href="http://www.rppi.cz"> RPPI </a></b></h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="Cloud-image">
-    <img src="images/mountain.png" alt="mountain-image">
+    <img class="mountain" src="images/mountain.png" alt="mountain-image">
 </div>
 
 <div class="middle-container">
