--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img src="Pasové_foto-modified.png" alt="Profile picture" style="width:150px;height:150px">
       <h2>Hello</h2>
       <p class="intro">My name is Miroslav Škota and I welcome you on my personal page. 
-        I am a christian, love good coffee and work as project manager at <a href="http://www.rppi.cz"> RPPI </a>.</p>
+        I am a christian, love good coffee and work as project manager at <a href="http://www.rppi.cz"> RPPI</a>.</p>
       <br>
     </div>
     <hr>
@@ -61,7 +61,7 @@
     <div class="contact-me">
         <br>
         <h2>Get In Touch</h2>
-        <p class="outro">In case you need to contact me, use the links below</p>
+        <p class="outro">In case you need to contact me, use the links below.</p>
         <br>
         <a class="btn" href="mailto:mskota2@gmail.com">CONTACT ME</a>
     </div>
@@ -76,7 +76,7 @@
     style="font-size: 20px;">LinkedIn</a>
     <br>
     <br>
-    <p style="color: #EAF6F6;">© 2022 Miroslav Škota</p>
+    <p style="color: #EAF6F6; font-size: 11px;">© 2022 Miroslav Škota</p>
 
 </div>
 
